--- a/app/src/main/res/layout/activity_signup_doctor.xml
+++ b/app/src/main/res/layout/activity_signup_doctor.xml
@@ -37,6 +37,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  E-mail"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toTopOf="@id/signup_doctor_password"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +54,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Password"
+            android:textColor="@color/black"
+            android:textColorHint="#848484"
             android:inputType="textPassword"
             app:layout_constraintBottom_toTopOf="@id/signup_doctor_password_again"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,6 +71,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Password Check"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +88,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Name"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/signup_doctor_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,6 +104,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Tel."
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="phone"
             app:layout_constraintBottom_toTopOf="@+id/signup_doctor_password"
             app:layout_constraintEnd_toEndOf="parent"
