--- a/app/src/main/res/layout/activity_signup_patient.xml
+++ b/app/src/main/res/layout/activity_signup_patient.xml
@@ -34,6 +34,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  E-mail"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toTopOf="@id/signup_patient_password"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +51,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Password"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             app:layout_constraintBottom_toTopOf="@id/signup_patient_password_again"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +68,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Password Check"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +85,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Name"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/signup_patient_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +100,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Tel."
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="phone"
             app:layout_constraintBottom_toTopOf="@+id/signup_patient_password"
             app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +116,8 @@
             android:background="#F2F2F2"
             android:ems="10"
             android:hint="  Address"
+            android:textColorHint="#848484"
+            android:textColor="@color/black"
             android:inputType="textPostalAddress"
             app:layout_constraintBottom_toTopOf="@+id/signup_patient_password_again"
             app:layout_constraintEnd_toEndOf="parent"
